@@ -1,3 +1,8 @@
+2007-08-06  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil.Cil/CilWorker.cs:
+		Fix the linked list after an InsertBefore, InsertAfter.
+
 2007-08-02  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil/GenericParameter.cs
